refactor: removed the inverted dependency of attendance sheet to studentroster